2006-09-27  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/irunner.py (InteractiveRunner.run_source): small fixes
	to help in handling doctests.  irunner is now pretty useful for
	running standalone scripts and simulate a full interactive session
	in a format that can be then pasted as a doctest.

	* IPython/iplib.py (InteractiveShell.__init__): Install exit/quit
	on top of the default (useless) ones.  This also fixes the nasty
	way in which 2.5's Quitter() exits (reverted [1785]).

	* IPython/Debugger.py (Pdb.__init__): Fix ipdb to work with python
	2.5.

	* IPython/ultraTB.py (TBTools.set_colors): Make sure that ipdb
	color scheme is updated as well when color scheme is changed
	interactively. 

2006-09-27  Ville Vainio  <vivainio@gmail.com>

	* iplib.py (raw_input): python 2.5 closes stdin on quit -> avoid
    infinite loop and just exit. It's a hack, but will do for a while.

2006-08-25  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py (ils): Add arguments dirs and files to
	the constructor, this makes it possible to get a list of only directories
	or only files.

2006-08-12  Ville Vainio  <vivainio@gmail.com>

	* Fakemodule.py, OInspect.py: Reverted 2006-08-11 mods,
	they broke unittest 

2006-08-11  Ville Vainio  <vivainio@gmail.com>

	* Fakemodule.py, OInspect.py: remove 2006-08-09 monkepatch
	by resolving issue properly, i.e. by inheriting FakeModule
	from types.ModuleType. Pickling ipython interactive data
	should still work as usual (testing appreciated).

2006-08-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/OInspect.py: monkeypatch inspect from the stdlib if
	running under python 2.3 with code from 2.4 to fix a bug with
	help().  Reported by the Debian maintainers, Norbert Tretkowski
	<norbert-AT-tretkowski.de> and Alexandre Fayolle
	<afayolle-AT-debian.org>.

2006-08-04  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Fixed the help message in the footer